--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.3",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.4.2",
     "redux-thunk": "^2.2.0",
